Fixed error where gitlab logos were uneven

--- a/static/styles.css
+++ b/static/styles.css
@@ -166,7 +166,6 @@ header a.True {
 /* Determines height for containers */
 .team_text {
   font-size: 1.15em;
-  height: 100%;
 }
 
 /* Styling for all character logo's (height for yamila_logo 
